feat:update function about authcode
